@@ -16,7 +16,7 @@
 package org.spockframework.smoke
 
 import org.spockframework.runtime.SpockAssertionError
-import spock.lang.Specification
+import spock.lang.*
 
 class WithBlocks extends Specification {
   def "don't turn nested with expressions into condition"() {
@@ -130,6 +130,23 @@ class WithBlocks extends Specification {
     }
   }
 
+  @Issue('https://github.com/spockframework/spock/issues/886')
+  def "with works with void methods"() {
+    given:
+    Person person = new Person()
+    expect:
+    person.check()
+    checkCondition()
+    with(person) {
+      check()
+      checkCondition()
+      verifyAll {
+        check()
+        checkCondition()
+      }
+    }
+  }
+
   int size() {
     42
   }
@@ -138,10 +155,18 @@ class WithBlocks extends Specification {
     object == 4
   }
 
+  void checkCondition() {
+    assert true
+  }
+
   static class Person {
     String name = "Fred"
     int age = 42
     Person spouse
+
+    void check() {
+      assert true
+    }
   }
 
   static class Employee extends Person {
